# code-indexer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.beads/: issues.jsonl
.codex/: config.toml
.github/workflows/: bench-smoke.yml  benchmarks.yml
.memory-bank/: index.md
.memory-bank/architecture/: data-store.md  indexing-pipeline.md  interfaces.md  overview.md
.memory-bank/guides/: data-store.md  indexing-pipeline.md  interfaces.md  overview.md
benches/: .gitignore  README.md  download_repos.sh  indexing.rs  search.rs
benches/results/: django.md  excalidraw.md  guava.md  kotlin.md  prometheus.md  ripgrep.md  tokio.md
benches/speed/: cases.json  run_speed_bench.py
examples/java-gradle/: AGENTS.md  CLAUDE.md  build.gradle  settings.gradle
examples/java-maven/: AGENTS.md  CLAUDE.md  pom.xml
examples/kotlin-gradle/: AGENTS.md  CLAUDE.md  build.gradle.kts
examples/rust-example/: AGENTS.md  CLAUDE.md  Cargo.toml
examples/typescript-example/: AGENTS.md  CLAUDE.md  package.json  tsconfig.json
scripts/: codex-with-code-indexer-mcp.sh  install.sh
src/: AGENTS.md  CLAUDE.md  error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/compass/: entry_detector.rs  mod.rs  node_builder.rs  profile_builder.rs
src/dependencies/: cargo.rs  mod.rs  npm.rs  resolver.rs
src/docs/: config_parser.rs  mod.rs  parser.rs
src/git/: mod.rs
src/index/: migrations.rs  mod.rs  models.rs  overlay.rs  sqlite.rs  write_queue.rs
src/indexer/: call_analyzer.rs  extractor.rs  import_resolver.rs  mod.rs  parser.rs  progress.rs  resolver.rs  scope_builder.rs  sidecar.rs  walker.rs  (+1 more)
tests/: AGENTS.md  CLAUDE.md  cli_commands.rs  dependency_resolution.rs  examples_integration.rs  file_tags_integration.rs  mcp_protocol.rs  mcp_tools.rs  p0_macro_navigation.rs  quality_benchmarks.rs  summary_first_contract.rs
(+71 files in other folders)
