[package]
name = "code-indexer"
version = "0.1.0"
edition = "2021"
description = "CLI tool and MCP server for code indexing and search using tree-sitter"
license = "MIT"

[lib]
name = "code_indexer"
path = "src/lib.rs"

[[bin]]
name = "code-indexer"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"

# MCP Server
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-io"] }

# Tree-sitter parsing
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24.0"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-typescript = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# File system
walkdir = "2.5"
ignore = "0.4"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# TOML parsing (for Cargo.toml)
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
strsim = "0.11"

# Performance
rayon = "1.10"
once_cell = "1.19"

# Additional tree-sitter parsers
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"

# New language parsers
tree-sitter-sequel = "0.3"
tree-sitter-bash = "0.23"
tree-sitter-lua = "0.4"
tree-sitter-swift = "0.7"
tree-sitter-haskell = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-hcl = "1.1"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.14"
